--- a/S11_plot_v1.ipynb
+++ b/S11_plot_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "[513 rows x 2 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[1001 rows x 2 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,136 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>freq</th>\n",
-       "      <th>S11_ADS</th>\n",
-       "      <th>S11_CST</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>3.510152e-13</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8.196129e+00</td>\n",
-       "      <td>3.529439e-13</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8.196129e+01</td>\n",
-       "      <td>2.603684e-13</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8.196129e+02</td>\n",
-       "      <td>-8.952816e-12</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8.196129e+03</td>\n",
-       "      <td>-9.298103e-10</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1502</th>\n",
-       "      <td>1.493000e+10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-8.399675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1503</th>\n",
-       "      <td>1.494000e+10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-8.429945</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1504</th>\n",
-       "      <td>1.496000e+10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-8.461689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1505</th>\n",
-       "      <td>1.497000e+10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-8.494530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1506</th>\n",
-       "      <td>1.499000e+10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-8.528150</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1507 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              freq       S11_ADS   S11_CST\n",
-       "0     0.000000e+00  3.510152e-13       NaN\n",
-       "1     8.196129e+00  3.529439e-13       NaN\n",
-       "2     8.196129e+01  2.603684e-13       NaN\n",
-       "3     8.196129e+02 -8.952816e-12       NaN\n",
-       "4     8.196129e+03 -9.298103e-10       NaN\n",
-       "...            ...           ...       ...\n",
-       "1502  1.493000e+10           NaN -8.399675\n",
-       "1503  1.494000e+10           NaN -8.429945\n",
-       "1504  1.496000e+10           NaN -8.461689\n",
-       "1505  1.497000e+10           NaN -8.494530\n",
-       "1506  1.499000e+10           NaN -8.528150\n",
-       "\n",
-       "[1507 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df = pd.merge_ordered(df_cst, df_ads, on='freq')\n",
     "\n",
     "df = df_ads.merge(df_cst, how= 'outer', on='freq')\n",
-    "\n",
-    "# df.sort_values(by='freq', inplace=True)\n",
-    "df"
+    "df.sort_values(by='freq', inplace=True)\n",
+    "corr_pearson = df.corr(method='pearson')\n",
+    "corr_kendall = df.corr(method='kendall')\n",
+    "corr_spearman = df.corr(method='spearman')"
    ]
   },
   {
@@ -473,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.12",
    "language": "python",
    "name": "python3"
   },
@@ -492,7 +373,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "be542be2bf897c10506b85333506db5056be73a550c36a28a38617d7f39edd49"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
