--- a/0_Koch_Bowtie_Simul_x_Medidas_plot.ipynb
+++ b/0_Koch_Bowtie_Simul_x_Medidas_plot.ipynb
@@ -995,7 +995,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1009,14 +1009,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.1"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
